--- a/app/Resources/views/default/politica_privacidade.html.twig
+++ b/app/Resources/views/default/politica_privacidade.html.twig
@@ -12,9 +12,9 @@
         <div class="col s12">
           <div class="card-panel">
             <div class="card-content">
-                <p> A BidTravel.com.br garante a privacidade e a segurança de seus usuários durante toda a navegação do site. Os dados cadastrados são armazenados em nosso banco de dados com o objetivo de melhorar o nosso relacionamento por meio de e-mail, mala direta e outras formas de interação. Para isso utilizamos cookies e informações de sua navegação (sessão do browser) com o intuito de conhecer o público e aperfeiçoar sempre nossos produtos e serviços, garantindo as melhores promoções e ofertas para você. Durante todo o processo, suas informações são mantidas em sigilo absoluto. 
+                <p> A BidTravel.com.br garante a privacidade e a segurança de seus usuários durante toda a navegação do site. Os dados cadastrados são armazenados em nosso banco de dados com o objetivo de melhorar o nosso relacionamento por meio de e-mail, mala direta e outras formas de interação. Para isso utilizamos cookies e informações de sua navegação (sessão do browser) com o intuito de conhecer o público e aperfeiçoar sempre nossos produtos e serviços, garantindo as melhores promoções e ofertas para você. Durante todo o processo, suas informações são mantidas em sigilo absoluto.
                 </p>
-                <p>A BidTravel.com.br atua com as mais modernas práticas relativas a meios de pagamento e possui parceiros líderes nestes segmentos. O número e demais dados de seu cartão de crédito não são armazenados em nosso banco de dados nem durante, nem após a conclusão da compra. 
+                <p>A BidTravel.com.br atua com as mais modernas práticas relativas a meios de pagamento e possui parceiros líderes nestes segmentos. O número e demais dados de seu cartão de crédito não são armazenados em nosso banco de dados nem durante, nem após a conclusão da compra.
                 </p>
                 <p>Para sua segurança, não aconselhamos a divulgação de sua senha na BidTravel.com.br a terceiros.</p>
                 <p>Boas Compras e boa diversão!!! \o/\o/\o/ </p>
@@ -23,10 +23,10 @@
                 <ol>
                   <li id="ancor-1">
                     <h6 class ="lime-text text-darken-4">INTRODUÇÃO</h6>
-                    <p>  
+                    <p>
                     Todas as referências a 'nossa', 'nós' ou 'companhia' nesta política e dentro dos avisos de opt-in são consideradas como referentes à BidTravel.com.br.</p>
-                    <p>Nós nos esforçamos para proteger a sua privacidade. Nós fornecemos esta Declaração de Privacidade para ajudá-lo a entender o que podemos fazer com qualquer informação pessoal que venhamos a obter de você. Ao nos fornecer suas informações pessoais, você declara que aceita nossa Declaração de Privacidade e que concorda que podemos coletar, usar e divulgar suas informações pessoais conforme descrito nesta Declaração de Privacidade. Se você não concorda com esta declaração, por favor não nos forneça suas informações pessoais. Esta Declaração de Privacidade é incorporada aos Termos e Condições que regem o uso deste site em geral e deles faz parte. Nós utilizaremos suas informações apenas para os propósitos especificados abaixo. 
-                    Nós podemos atualizar esta Declaração de Privacidade de tempos em tempos. Sugerimos que você verifique esta página regularmente para ter certeza de ter lido a versão mais recente. 
+                    <p>Nós nos esforçamos para proteger a sua privacidade. Nós fornecemos esta Declaração de Privacidade para ajudá-lo a entender o que podemos fazer com qualquer informação pessoal que venhamos a obter de você. Ao nos fornecer suas informações pessoais, você declara que aceita nossa Declaração de Privacidade e que concorda que podemos coletar, usar e divulgar suas informações pessoais conforme descrito nesta Declaração de Privacidade. Se você não concorda com esta declaração, por favor não nos forneça suas informações pessoais. Esta Declaração de Privacidade é incorporada aos Termos e Condições que regem o uso deste site em geral e deles faz parte. Nós utilizaremos suas informações apenas para os propósitos especificados abaixo.
+                    Nós podemos atualizar esta Declaração de Privacidade de tempos em tempos. Sugerimos que você verifique esta página regularmente para ter certeza de ter lido a versão mais recente.
                     Alterações à Declaração de Privacidade são anotadas aqui: Data da última revisão: 16.06.2016 </p>
                   </li>
                   <li id="ancor-2">
@@ -36,20 +36,20 @@
 
                   <li id="ancor-3">
                     <h6 class ="lime-text text-darken-4">O QUE É INFORMAÇÃO PESSOAL?</h6>
-                    <p>Informação pessoal é informação quer permite identificar um indivíduo, conforme definido pela legislação aplicável. Não inclui informações agregadas que não são suficientes para identificá-lo pessoalmente</p> 
+                    <p>Informação pessoal é informação quer permite identificar um indivíduo, conforme definido pela legislação aplicável. Não inclui informações agregadas que não são suficientes para identificá-lo pessoalmente</p>
                   </li>
                   <li id="ancor-4">
                     <h6 class ="lime-text text-darken-4"> COLETAR INFORMAÇÃO PESSOAL</h6>
-                    <p>Com exceção das informações obrigatórias para o cadastro no site, você pode decidir quais informações pessoais vai nos fornecer. Apenas coletaremos informações pessoais que você decidir fornecer. Sempre que possível, permitiremos que você determine como vamos usar essa informação (por exemplo, fazendo opt–in ou opt-out para receber ofertas promocionais especiais).</p> 
+                    <p>Com exceção das informações obrigatórias para o cadastro no site, você pode decidir quais informações pessoais vai nos fornecer. Apenas coletaremos informações pessoais que você decidir fornecer. Sempre que possível, permitiremos que você determine como vamos usar essa informação (por exemplo, fazendo opt–in ou opt-out para receber ofertas promocionais especiais).</p>
                     <p>Você pode decidir nos fornecer suas informações pessoais se, por exemplo, você: (I) nos contatar com uma dúvida; (II) cadastrar-se no site; (III) preencher uma pesquisa ou outro formulário que inclua sua informação pessoal; (IV) pedir que nós lhe forneçamos informação; (V) participar de um concurso; (VI) publicar informação em áreas públicas do site, ou aproveitar uma promoção. </p>
                     <p>Você tem a oportunidade de decidir se quer ou não receber comunicações nossas, exceto comunicações que sejam exigidas por lei ou para gerenciar alguma transação requisitada por você, em qualquer lugar onde pedirmos informações sobre você. </p>
-                    <p>Ao nos fornecer sua informação pessoal, você compreende completamente e concorda com a transferência de tais informações pessoais para outros países ou territórios e com a coleta e processamento de tais informações nesses locais. Qualquer transferência e processamento feitas por nós estarão de acordo com esta Declaração de Privacidade. 
+                    <p>Ao nos fornecer sua informação pessoal, você compreende completamente e concorda com a transferência de tais informações pessoais para outros países ou territórios e com a coleta e processamento de tais informações nesses locais. Qualquer transferência e processamento feitas por nós estarão de acordo com esta Declaração de Privacidade.
                     </p>
                   </li>
                   <li id="ancor-5">
                     <h6 class ="lime-text text-darken-4"> USO DE COOKIES EM NOSSO SITE </h6>
                     <p>Como em muitos outros sites, nós utilizamos "cookies" em nosso site para nos ajudar a coletar e armazenar informações sobre visitantes. </p>
-                    <p>Um cookie é um pequeno arquivo de dados que nosso servidor envia para o seu browser quando você visita o site. O uso de cookies nos permite ajudá-lo a usar certos aspectos do nosso site.</p> 
+                    <p>Um cookie é um pequeno arquivo de dados que nosso servidor envia para o seu browser quando você visita o site. O uso de cookies nos permite ajudá-lo a usar certos aspectos do nosso site.</p>
                     <p>Você pode apagar os cookies a qualquer momento, ou pode configurar seu browser para rejeitar ou desabilitar cookies. </p>
                     <p>Você pode obter informação sobre como gerenciar cookies no endereço www.aboutcookies.org . </p>
                     <p>Nós podemos usar a informação nos cookies para os seguintes propósitos: </p>
@@ -71,11 +71,11 @@
                   </li>
                    <li id="ancor-7">
                     <h6 class ="lime-text text-darken-4"> USO DA INFORMAÇÃO PESSOAL</h6>
-                    <p>Nós podemos usar e/ou divulgar informações pessoais coletadas de você em uma ou mais das seguintes maneiras:</p> 
+                    <p>Nós podemos usar e/ou divulgar informações pessoais coletadas de você em uma ou mais das seguintes maneiras:</p>
                     <p>a) Comunicações de Marketing.</p>
                     <p>Podemos usar suas informações pessoais para nos comunicar com você sobre nossos leilões. No entanto, você poderá escolher se deseja ou não receber tais comunicações na primeira vez em que nos fornecer informações pessoais. Você também terá a oportunidade de cancelar a assinatura sempre que nos comunicarmos com você. Você também poderá cancelar tais comunicações a qualquer momento. </p>
                     <p>b) Análise de Marketing </p>
-                    <p>Podemos usar a informação para análise interna de marketing, por exemplo, para avaliar tendências entre nossos usuários ou para medir o volume de tráfego nos nossos sites. Também podemos compartilhar informações não-pessoais com terceiros, como anunciantes, de forma agregada e anônima, o que significa que a informação não conterá qualquer informação de identificação pessoal sobre você. Nós apenas compartilharemos informações pessoais identificáveis com terceiros para realizar análises de marketing se tivermos o seu consentimento.</p> 
+                    <p>Podemos usar a informação para análise interna de marketing, por exemplo, para avaliar tendências entre nossos usuários ou para medir o volume de tráfego nos nossos sites. Também podemos compartilhar informações não-pessoais com terceiros, como anunciantes, de forma agregada e anônima, o que significa que a informação não conterá qualquer informação de identificação pessoal sobre você. Nós apenas compartilharemos informações pessoais identificáveis com terceiros para realizar análises de marketing se tivermos o seu consentimento.</p>
                     <p>c) Fins transacionais.</p>
                     <p>Nós podemos usar suas informações pessoais para responder a suas consultas e requisições, e para gerenciar transações tais como pagamentos de cartão de crédito para qualquer bem que você comprar de nós ou de algum de nossos parceiros, ou ainda para realizar a entrega para essas transações. As informações pessoais que você nos fornecer podem ser usadas por um parceiro ou revendedor autorizado para realizar a transação. </p>
                     <p>d) Ofertas de terceiros.</p>
@@ -99,18 +99,28 @@
                 </li>
                 <li id="ancor-10">
                     <h6 class ="lime-text text-darken-4">  PERMISSÕES DE PORTIFÓLIO </h6>
-                    <p>Podemos ocasionalmente enviar-lhe comunicações sobre cupons promocionais não mencionados no site www.bidtravel.com.br.</p> 
+                    <p>Podemos ocasionalmente enviar-lhe comunicações sobre cupons promocionais não mencionados no site www.bidtravel.com.br.</p>
                     <p>Fornecer uma permissão geral para que nos comuniquemos com você sobre os cupons existentes no site www.bidtravel.com.br não significa que você receberá comunicações sobre todas as ofertas existentes no referido site. Nós somente nos comunicaremos com você sobre aqueles cupons que acreditamos possam ser de seu interesse especial. Quaisquer comunicações desse tipo lhe darão a oportunidade de cancelar todas as comunicações a respeito das ofertas contidas no site. </p>
                 </li>
                 <li id="ancor-11">
                     <h6 class ="lime-text text-darken-4"> LINKS </h6>
                     <p>Este site pode conter links ou referências a outros sites que estão fora do nosso controle. Por favor, esteja ciente de que não temos controle sobre esses sites e que a nossa Declaração de Privacidade não se aplica a esses sites. Nós o encorajamos a ler as declarações de privacidade e termos e condições de sites relacionados ou mencionados nos quais você entrar. </p>
                     <p>Nada nesta Declaração de Privacidade, ou em outro local, criará ou complementará qualquer direito ou reivindicação (seja ele legal, correto ou de outra forma) que qualquer indivíduo ou pessoa possa ter, amparado ou não na lei, contra a companhia ou contra qualquer terceira parte ou contra quaisquer de seus respectivos diretores, oficiais, funcionários, agentes ou representantes; tampouco irá a existência desta Declaração de Privacidade ou a sua execução impor ou complementar alguma obrigação ou responsabilidade à BidTravel.com.br que ela já não possua perante a lei. </p>
-                  </li> 
-                                  
+                  </li>
+
               </div>
             </div>
         </div>
     </div>
-  </div> 
+  </div>
+{% endblock %}
+{% block javascripts %}
+    {% javascripts
+    '@AppBundle/Resources/js/jquery-2.1.1.min.js'
+    '@AppBundle/Resources/js/materialize.js'
+    '@AppBundle/Resources/js/init.js'
+    '@AppBundle/Resources/js/swiper.min.js'
+    '@AppBundle/Resources/js/como-funciona.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
