--- a/app/Resources/views/default/social.html.twig
+++ b/app/Resources/views/default/social.html.twig
@@ -19,5 +19,15 @@
             </div>
         </div>
     </div>
-  </div> 
+  </div>
+{% endblock %}
+{% block javascripts %}
+    {% javascripts
+    '@AppBundle/Resources/js/jquery-2.1.1.min.js'
+    '@AppBundle/Resources/js/materialize.js'
+    '@AppBundle/Resources/js/init.js'
+    '@AppBundle/Resources/js/swiper.min.js'
+    '@AppBundle/Resources/js/como-funciona.js' %}
+    <script src="{{ asset_url }}"></script>
+    {% endjavascripts %}
 {% endblock %}
